# src/express/controllers/payment-plan.controller.ts
@@ -1,5 +1,5 @@
 import { Controller, Route, Get, Query , Post, Body, Delete, SuccessResponse, Put } from 'tsoa';
-import { IPaymentPlan, IPaymentPlanService, TYPES } from '../libs/user-directory/interfaces';
+import { IPaymentPlan, IPaymentPlanService, TYPES } from '../../libs/user-directory/interfaces';
 import { inject, injectable } from 'inversify';
 
 @Route('payment-plans')
